--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,101 +1,107 @@
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+build-backend = "pdm.backend"
+requires = ["pdm-backend"]
 
-[tool.poetry]
-name = "env-alias"
-version = "0.5.3"
-description = "Powerful helper utility to create shell alias commands to easily set collections of environment variables often with secret values from a variety of data-sources and data-formats."
-authors = ["Nicholas de Jong <contact@nicholasdejong.com>"]
-license = "BSD-2-Clause"
-readme = "README.md"
-packages = [{ include = "env_alias", from = "src" }]
+# project
+# ===
+[project]
+authors = [{name="Nicholas de Jong", email="ndejong@threatpatrols.com"}]
 classifiers = [
-    "Environment :: Console",
-    "Intended Audience :: Developers",
-    "Intended Audience :: Information Technology",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12"
+    "Topic :: Security",
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: Apache Software License"
 ]
+dependencies = [
+    "pyyaml>=5.0"   # https://pypi.org/project/pyyaml/#history
+]
+description = "Powerful helper utility to create shell alias commands to easily set collections of environment variables often with secret values from a variety of data-sources and data-formats."
+license = {text = "BSD-2-Clause" }
+name = "env-alias"
+requires-python = ">=3.8,<4"
+version = "0.5.3"
+readme = "README.md"
 keywords = ["env-alias", "shell", "env", "alias", "bash"]
 
-
-[tool.poetry.urls]
-Documentation = "https://env-alias.readthedocs.io/"
-Homepage = "https://github.com/ndejong/env-alias"
-Repository = "https://github.com/ndejong/env-alias"
-"Bug Tracker" = "https://github.com/ndejong/env-alias/issues"
-
-[tool.poetry.scripts]
+[project.scripts]
 env-alias = "env_alias.main:entrypoint"
 
+[project.urls]
+Documentation = "https://threatpatrols.github.io/env-alias/"
+Homepage = "https://github.com/threatpatrols/env-alias"
+Repository = "https://github.com/threatpatrols/env-alias.git"
+"Bug Tracker" = "https://github.com/threatpatrols/env-alias/issues"
 
-[tool.poetry.dependencies]
-python = "^3.8"
-pyyaml  = ">=5.0"               # https://pypi.org/project/pyyaml/#history
 
-[tool.poetry.dev-dependencies]
-black = ">=23.0"                # https://pypi.org/project/black/#history
-flake8 = ">=7.1"                # https://pypi.org/project/flake8/#history
-isort = ">=5.13"                # https://pypi.org/project/isort/#history
-mypy = ">=1.10"                 # https://pypi.org/project/mypy/#history
-pycln = ">=2.4"                 # https://pypi.org/project/pycln/#history
-pytest = ">=8.2"                # https://pypi.org/project/pytest/#history
-safety = ">=3.2"                # https://pypi.org/project/safety/#history
-types-aiofiles = ">=23.2"       # https://pypi.org/project/types-aiofiles/#history
-types-PyYAML = ">=6.0"          # https://pypi.org/project/types-PyYAML/#history
-# NB: pip installs in .readthedocs.yml need to be kept up-to-date manually
-novella = ">=0.2"               # https://pypi.org/project/novella/#history
-pydoc-markdown = ">=4.8"        # https://pypi.org/project/pydoc-markdown/#history
-mkdocs-material = ">=9.5"       # https://pypi.org/project/mkdocs-material/#history
-
-[tool.poetry.plugins."slap.plugins.check"]
-changelog = "slap.ext.checks.changelog:ChangelogValidationCheckPlugin"
-general = "slap.ext.checks.general:GeneralChecksPlugin"
-poetry = "slap.ext.checks.poetry:PoetryChecksPlugin"
-release = "slap.ext.checks.release:ReleaseChecksPlugin"
-
+# slap-cli
+# ===
 [tool.slap]
 typed = true
 release.branch = "dev"
 
 [tool.slap.test]
 check = "slap check"
-black = "black --check src/ tests/"
-flake8 = "flake8 src/ tests/"
-isort = "isort --check-only src/ tests/"
-mypy = "dmypy run src/"
-pycln  = "pycln src/ tests/ --check"
-safety = "pip freeze | safety check --stdin --short-report --output text"
+mypy = "dmypy run src"
 pytest = "pytest tests/ -vv"
+ruff-format = "ruff format --check"
+ruff-lint = "ruff check"
 
 [tool.slap.run]
-format = "black src/ tests/ && isort src/ tests/"
-docs-build = "cd docs && novella --base-url env-alias/"
-docs-server = "cd docs && novella --serve"
+format = "ruff format ."
+check-prereqs = """set -e; \
+    uv --help > /dev/null || (echo 'Failed uv prereq!' && exit 1); \
+    pdm --help > /dev/null || (echo 'Failed pdm prereq!' && exit 1); \
+    flit --help > /dev/null || (echo 'Failed flit prereq!' && exit 1); \
+    echo "Prereqs okay."
+"""
+docs-dev = """set -e; \
+    cd docs \
+    && touch uv.lock \
+    && uv run --active -- bash -xc 'mkdocs serve'
+"""
+docs-build = """set -e; \
+    cd docs \
+    && uv run --active -- bash -xc 'mkdocs build'
+"""
+package-build = """set -e; \
+    slap release --validate \
+    && slap test \
+    && slap publish --dry --build-directory ./dist
+"""
 
+
+# mypy
+# ===
 [tool.mypy]
-explicit_package_bases = true
-ignore_missing_imports = true
-mypy_path = ["src"]
-namespace_packages = true
 pretty = true
-python_version = "3.8"
+warn_redundant_casts = true
+#warn_unused_ignores = true
+namespace_packages = true
 show_error_codes = true
 show_error_context = true
-strict = true
 warn_no_return = true
-warn_redundant_casts = true
 warn_unreachable = true
-warn_unused_ignores = true
 
-[tool.isort]
-profile = "black"
-line_length = 120
-combine_as_imports = true
 
-[tool.black]
+# uv
+# ===
+[tool.uv]
+dev-dependencies = [
+  "ruff",
+  "pytest",
+  "mypy",
+  "types-aiofiles",
+  "types-PyYAML",
+]
+
+
+# ruff
+# ===
+[tool.ruff]
 line-length = 120
+
+[tool.ruff.lint]
+ignore = ["E501"]  # E501 line too long (151 > 120 characters) - https://www.flake8rules.com/rules/E501.html
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**.py" = ["F401"]  # F401 module imported but unused
+"src/env_alias/main.py" = ["W293", "W291"]  # W293 blank line contains whitespace; W291 trailing whitespace
