Migrate to threatpatrols

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,14 +69,19 @@ package-build = """set -e; \
 # ===
 [tool.mypy]
 pretty = true
-warn_redundant_casts = true
-#warn_unused_ignores = true
-exclude = "src/threatpatrols_action/shared/data/.*"
+explicit_package_bases = true
+ignore_missing_imports = true
+mypy_path = ["src"]
 namespace_packages = true
+pretty = true
+python_version = "3.8"
 show_error_codes = true
 show_error_context = true
+strict = true
 warn_no_return = true
+warn_redundant_casts = true
 warn_unreachable = true
+warn_unused_ignores = true
 
 
 # ===
