--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,32 +2,31 @@
 # Navigation
 # ===
 nav:
-  - Home: index.md
-
-  - Definition Attributes:
-    - definition-attributes/overview.md
-    - definition-attributes/source.md
-    - definition-attributes/parser.md
-    - definition-attributes/selector.md
-    - definition-attributes/name.md
-    - definition-attributes/value.md
-    - definition-attributes/value-to.md
-    - definition-attributes/exec.md
-    - definition-attributes/override.md
-    - definition-attributes/keepass-password.md
-    - definition-attributes/ansible-vault-password.md
-    - definition-attributes/ansible-vault-password-file.md
-
-  - Examples:
-    - examples/terraform-aws-project.md
-    - examples/aws-credentials.md
-    - examples/ansible-project.md
-    - examples/debugging.md
-
-  - Other:
-    - project.md
-    - development.md
-    - license.md
+  - Env Alias:
+    - Home: index.md
+    - Definition Attributes:
+      - definition-attributes/overview.md
+      - definition-attributes/source.md
+      - definition-attributes/parser.md
+      - definition-attributes/selector.md
+      - definition-attributes/name.md
+      - definition-attributes/value.md
+      - definition-attributes/value-to.md
+      - definition-attributes/exec.md
+      - definition-attributes/override.md
+      - definition-attributes/keepass-password.md
+      - definition-attributes/ansible-vault-password.md
+      - definition-attributes/ansible-vault-password-file.md
+    - Examples:
+      - examples/terraform-aws-project.md
+      - examples/aws-credentials.md
+      - examples/ansible-project.md
+      - examples/debugging.md
+    - Other:
+      - project.md
+      - development.md
+      - license.md
+  - Threat Patrols Docs: https://docs.threatpatrols.com/
 
 exclude_docs: |
   !.github
@@ -74,8 +73,8 @@ theme:
     - navigation.expand         # When expansion is enabled, the left sidebar will expand all collapsible subsections by default, so the user doesn't have to open subsections manually
     #- navigation.sections       # When sections are enabled, top-level sections are rendered as groups in the sidebar for viewports above 1220px, but remain as-is on mobile.
     - navigation.top            # A back-to-top button can be shown when the user, after scrolling down, starts to scroll up again. It's rendered centered and just below the header.
-    #- navigation.tabs           # When tabs are enabled, top-level sections are rendered in a menu layer below the header for viewports above 1220px, but remain as-is on mobile.
-    #- navigation.tabs.sticky    # When sticky tabs are enabled, navigation tabs will lock below the header and always remain visible when scrolling down.
+    - navigation.tabs           # When tabs are enabled, top-level sections are rendered in a menu layer below the header for viewports above 1220px, but remain as-is on mobile.
+    - navigation.tabs.sticky    # When sticky tabs are enabled, navigation tabs will lock below the header and always remain visible when scrolling down.
     - search.highlight
 
 # Additional configuration
