--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,22 +5,29 @@ requires = ["pdm-backend"]
 # project
 # ===
 [project]
+name = "env-alias"
+license = {text = "BSD-2-Clause" }
 authors = [{name="Nicholas de Jong", email="ndejong@threatpatrols.com"}]
+description = "Powerful helper utility to create shell alias commands to easily set collections of environment variables often with secret values from a variety of data-sources and data-formats."
+version = "0.5.3"
+readme = "README.md"
+requires-python = ">=3.8,<4"
+keywords = ["env-alias", "shell", "env", "alias", "bash"]
 classifiers = [
     "Topic :: Security",
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: Apache Software License"
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13"
 ]
 dependencies = [
     "pyyaml>=5.0"   # https://pypi.org/project/pyyaml/#history
 ]
-description = "Powerful helper utility to create shell alias commands to easily set collections of environment variables often with secret values from a variety of data-sources and data-formats."
-license = {text = "BSD-2-Clause" }
-name = "env-alias"
-requires-python = ">=3.8,<4"
-version = "0.5.3"
-readme = "README.md"
-keywords = ["env-alias", "shell", "env", "alias", "bash"]
 
 [project.scripts]
 env-alias = "env_alias.main:entrypoint"
